[기타] open graph 메타데이터 등록

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name="og:title" content="PhotoMap 관리자 페이지">
+  <meta name="og:description" content="PhotoMap 관리자용 관리페이지">
+  <meta property="og:image" content="https://ko.gravatar.com/userimage/177840486/18e940ec18e307445967456cc9cb7cdf.jpeg">
 
   <title>PhotoMap Admin Page - Dashboard</title>
 
