--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
   <!-- AWS SDK -->
-  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.610.0.min.js"></script>
+  <script src="js/aws-sdk-2.610.0.min.js"></script>
 
   <!-- Kakao Web Library-->
   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
@@ -170,7 +170,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">User Number</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="userNumber">0</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="userNumber">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-users fa-2x text-gray-300"></i>
@@ -187,7 +187,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Map Number</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="mapNumber">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-map fa-2x text-gray-300"></i>
@@ -204,7 +204,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Story Number</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="storyNumber">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-sticky-note fa-2x text-gray-300"></i>
@@ -221,7 +221,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Log Number</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">0</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="logNumber">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -311,6 +311,11 @@
 
   <!-- Custom Kakao Library-->
   <script src="js/kakao.min.js"></script>
+
+  <!-- Page script -->
+  <script>
+    getCardNumber();
+  </script>
 </body>
 
 </html>
