--- a/notice.html
+++ b/notice.html
@@ -27,7 +27,7 @@
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
 
     <!-- AWS SDK -->
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.610.0.min.js"></script>
+    <script src="js/aws-sdk-2.610.0.min.js"></script>
 
     <!-- Kakao Web Library-->
     <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
