--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
           <i class="fas fa-fw fa-chart-area"></i>
           <span>공지사항</span></a>
       </li>
+      
+      <!-- Nav Item - Table -->
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+          <i class="fas fa-fw fa-table"></i>
+          <span>Table</span>
+        </a>
+        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Database Tables:</h6>
+            <a class="collapse-item" href="table-user.html">Users</a>
+            <a class="collapse-item" href="table-map.html">Maps</a>
+            <a class="collapse-item" href="table-story.html">Stories</a>
+            <a class="collapse-item" href="table-log.html">Logs</a>
+          </div>
+        </div>
+      </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
@@ -344,8 +361,8 @@
 
   <!-- Page script -->
   <script>
-    getCardNumber();
-    getUserChart();
+    getQuery('cardNumber', setCardNumber);
+    getQuery('userChart', setUserChart);
   </script>
 </body>
 
