[자원] css, js 분리

--- a/index.html
+++ b/index.html
@@ -29,35 +29,8 @@
       rel="stylesheet"
     />
 
-    <style>
-      output {
-        position: absolute;
-        background-color: #999999;
-        width: 50px;
-        height: 30px;
-        text-align: center;
-        color: white;
-        border-radius: 10px;
-        display: none;
-        font: bold 15px/30px Georgia;
-        bottom: 175%;
-        left: 0;
-        margin-left: -1%;
-      }
-      output:after {
-        content: '';
-        position: absolute;
-        width: 0;
-        height: 0;
-        border-top: 10px solid #999999;
-        border-left: 5px solid transparent;
-        border-right: 5px solid transparent;
-        top: 100%;
-        left: 50%;
-        margin-left: -5px;
-        margin-top: -1px;
-      }
-    </style>
+    <!-- Custom Konva Canvas Style -->
+    <link href="/css/canvas-konva.css" rel="stylesheet" />
 
     <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet" />
@@ -256,89 +229,6 @@
                 </div>
               </div>
             </div>
-            <script>
-              // let's think our stage virtual size will be 1000x1000px
-              // but the real size will be different to fit user's page
-              // so the stage will be 100% visible on any device
-              var stageWidth = 1000;
-              var stageHeight = 1000;
-
-              var stage = new Konva.Stage({
-                container: 'container',
-                width: stageWidth,
-                height: stageHeight,
-                draggable: true
-              });
-
-              var layer = new Konva.Layer();
-              stage.add(layer);
-
-              var layerStory = new Konva.Layer();
-              stage.add(layerStory);
-
-              var layerUser = new Konva.Layer();
-              stage.add(layerUser);
-
-              function fitStageIntoParentContainer() {
-                var container = document.querySelector('#stage-parent');
-
-                // now we need to fit stage into parent
-                var containerWidth = container.offsetWidth;
-                // to do this we need to scale the stage
-                var scale = containerWidth / stageWidth;
-
-                stage.width(stageWidth * scale);
-                stage.height(stageHeight * scale);
-                stage.scale({ x: scale, y: scale });
-                stage.draw();
-              }
-
-              fitStageIntoParentContainer();
-              // adapt the stage on any window resize
-              window.addEventListener('resize', fitStageIntoParentContainer);
-
-              var scaleBy = 1.01;
-              stage.on('wheel', (e) => {
-                e.evt.preventDefault();
-                var oldScale = stage.scaleX();
-                if (oldScale > 2) {
-                  stage.scale({ x: 2, y: 2 });
-                  return;
-                } else if (oldScale < 0.1) {
-                  stage.scale({ x: 0.1, y: 0.1 });
-                  return;
-                }
-
-                var mousePointTo = {
-                  x:
-                    stage.getPointerPosition().x / oldScale -
-                    stage.x() / oldScale,
-                  y:
-                    stage.getPointerPosition().y / oldScale -
-                    stage.y() / oldScale
-                };
-
-                var newScale =
-                  e.evt.deltaY > 0 ? oldScale * scaleBy : oldScale / scaleBy;
-                stage.scale({ x: newScale, y: newScale });
-                $('#canvasScaler').val(newScale);
-
-                var newPos = {
-                  x:
-                    -(
-                      mousePointTo.x -
-                      stage.getPointerPosition().x / newScale
-                    ) * newScale,
-                  y:
-                    -(
-                      mousePointTo.y -
-                      stage.getPointerPosition().y / newScale
-                    ) * newScale
-                };
-                stage.position(newPos);
-                stage.batchDraw();
-              });
-            </script>
           </div>
           <!-- /.container-fluid -->
         </div>
@@ -402,7 +292,7 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript-->
+    <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -412,97 +302,21 @@
     <!-- Page level plugins -->
     <script src="/vendor/chart.js/Chart.min.js"></script>
 
-    <!-- Custom scripts for all pages-->
+    <!-- Custom scripts for all pages -->
     <script src="/js/sb-admin-2.min.js"></script>
 
-    <!-- Custom Kakao Library-->
+    <!-- Custom Kakao Library -->
     <script src="/js/kakao.min.js"></script>
+
+    <!-- Custom Konva Library-->
+    <script src="/js/konva.min.js"></script>
 
     <!-- Page script -->
     <script>
+      fitStageIntoParentContainer();
       $(document).ready(function() {
+        scalerInit();
         request(API.MapList, setMapList);
-
-        // for cache
-        var el, newPoint, newPlace, offset;
-
-        $('#canvasScaler').val(stage.scaleX());
-        $('#canvasScaler')
-          .on('input', function() {
-            var scaleValue = $('#canvasScaler').val();
-
-            var oldScale = stage.scaleX();
-            var mousePointTo = {
-              x: stage.width() / 2 / oldScale - stage.x() / oldScale,
-              y: stage.height() / 2 / oldScale - stage.y() / oldScale
-            };
-            stage.scale({ x: scaleValue, y: scaleValue });
-
-            var newPos = {
-              x:
-                -(mousePointTo.x - stage.width() / 2 / scaleValue) * scaleValue,
-              y:
-                -(mousePointTo.y - stage.height() / 2 / scaleValue) * scaleValue
-            };
-            stage.position(newPos);
-            stage.batchDraw();
-
-            // Cache this for efficiency
-            el = $(this);
-
-            // Measure width of range input
-            width = el.width();
-
-            // Figure out placement percentage between left and right of input
-            newPoint =
-              (el.val() - el.attr('min')) / (el.attr('max') - el.attr('min'));
-            console.log(newPoint);
-            // Janky value to get pointer to line up better
-            offset = -1.7;
-
-            // Prevent bubble from going beyond left or right (unsupported browsers)
-            if (newPoint < 0) {
-              newPlace = 0;
-            } else if (newPoint > 1) {
-              newPlace = width;
-            } else {
-              newPlace = width * newPoint + offset;
-              offset -= newPoint;
-            }
-            var container = document.querySelector('#stage-parent');
-            var scale = container.offsetWidth / stageWidth;
-            console.log(scale);
-
-            // Move bubble
-            el.next('output')
-              .css({
-                left: newPlace,
-                marginLeft: offset + '%'
-              })
-              .text('x' + Math.round((el.val() / scale) * 10) / 10);
-          })
-          .trigger('input');
-
-        $('#canvasScaler').mouseover(function() {
-          el = $(this);
-
-          el.next('output').css({
-            display: 'inline-block'
-          });
-        });
-        $('#canvasScaler').mouseleave(function() {
-          el = $(this);
-
-          el.next('output').css({
-            display: 'none'
-          });
-        });
-
-        $('#canvasScaler')
-          .next('output')
-          .css({
-            display: 'none'
-          });
       });
     </script>
   </body>
