[기능] log삭제에 따른 변경

--- a/admin/index.html
+++ b/admin/index.html
@@ -108,7 +108,7 @@
               <a class="collapse-item" href="table-user.html">Users</a>
               <a class="collapse-item" href="table-map.html">Maps</a>
               <a class="collapse-item" href="table-story.html">Stories</a>
-              <a class="collapse-item" href="table-log.html">Logs</a>
+              <a class="collapse-item" href="table-usermap.html">UserMaps</a>
             </div>
           </div>
         </li>
@@ -347,7 +347,7 @@
                 </div>
               </div>
 
-              <!-- Log Card -->
+              <!-- UserMap Card -->
               <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-left-warning shadow h-100 py-2">
                   <div class="card-body">
@@ -356,11 +356,11 @@
                         <div
                           class="text-xs font-weight-bold text-warning text-uppercase mb-1"
                         >
-                          Log Number
+                          UserMap Number
                         </div>
                         <div
                           class="h5 mb-0 font-weight-bold text-gray-800"
-                          id="logNumber"
+                          id="usermapNumber"
                         >
                           Loading...
                         </div>
