--- a/admin/table-usermap.html
+++ b/admin/table-usermap.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>PhotoMap Admin - Log Table</title>
+    <title>PhotoMap Admin - UserMap Table</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -103,7 +103,7 @@
               <a class="collapse-item" href="table-user.html">Users</a>
               <a class="collapse-item" href="table-map.html">Maps</a>
               <a class="collapse-item" href="table-story.html">Stories</a>
-              <a class="collapse-item" href="table-log.html">Logs</a>
+              <a class="collapse-item" href="table-usermap.html">UserMaps</a>
             </div>
           </div>
         </li>
@@ -237,7 +237,7 @@
           <!-- Begin Page Content -->
           <div class="container-fluid">
             <!-- Page Heading -->
-            <h1 class="h3 mb-4 text-gray-800">로그</h1>
+            <h1 class="h3 mb-4 text-gray-800">유저-지도</h1>
 
             <div class="row">
               <div class="col-lg-12">
@@ -253,7 +253,7 @@
                     aria-controls="collapseCardNoticeList"
                   >
                     <h6 class="m-0 font-weight-bold text-primary">
-                      로그 목록
+                      유저-지도 목록
                     </h6>
                   </a>
                   <!-- Card Content - Collapse -->
@@ -357,7 +357,7 @@
     <script src="/js/kakao-admin.min.js"></script>
     <script>
       $(document).ready(function() {
-        getQuery('logTable', setDataTable);
+        getQuery('usermapTable', setDataTable);
       });
     </script>
   </body>
