--- a/admin/table-map.html
+++ b/admin/table-map.html
@@ -103,7 +103,7 @@
               <a class="collapse-item" href="table-user.html">Users</a>
               <a class="collapse-item" href="table-map.html">Maps</a>
               <a class="collapse-item" href="table-story.html">Stories</a>
-              <a class="collapse-item" href="table-log.html">Logs</a>
+              <a class="collapse-item" href="table-usermap.html">UserMaps</a>
             </div>
           </div>
         </li>
