--- a/admin/index.html
+++ b/admin/index.html
@@ -222,6 +222,10 @@
                   class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                   aria-labelledby="userDropdown"
                 >
+                  <a class="dropdown-item" href="/">
+                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                    기본 페이지
+                  </a>
                   <a
                     class="dropdown-item"
                     href="#"
