--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
           </a>
         </li>
 
+        <!-- Nav Item - Notice -->
+        <li class="nav-item">
+          <a class="nav-link" href="/">
+            <i class="fas fa-map-marker-alt fa-chart-area"></i>
+            <span>지도 보기</span>
+          </a>
+        </li>
+
         <!-- Divider -->
         <hr class="sidebar-divider" />
 
@@ -182,6 +190,7 @@
                 <div
                   class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                   aria-labelledby="userDropdown"
+                  id="userInfo"
                 >
                   <a
                     class="dropdown-item"
