--- a/notice.html
+++ b/notice.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>PhotoMap Admin - Map Table</title>
+    <title>PhotoMap Admin - Notice</title>
 
     <!-- Custom fonts for this template-->
     <link
@@ -49,63 +49,31 @@
           <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
           </div>
-          <div class="sidebar-brand-text mx-3">PhotoMap Admin</div>
+          <div class="sidebar-brand-text mx-3">PhotoMap</div>
         </a>
-
-        <!-- Divider -->
-        <hr class="sidebar-divider my-0" />
-
-        <!-- Nav Item - Dashboard -->
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span></a
-          >
-        </li>
 
         <!-- Divider -->
         <hr class="sidebar-divider" />
 
         <!-- Heading -->
         <div class="sidebar-heading">
-          Interface
+          옵션
         </div>
 
         <!-- Nav Item - Notice -->
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="notice.html">
             <i class="fas fa-fw fa-chart-area"></i>
-            <span>공지사항</span></a
-          >
+            <span>공지사항 보기</span>
+          </a>
         </li>
 
-        <!-- Nav Item - Table -->
+        <!-- Nav Item - Notice -->
         <li class="nav-item">
-          <a
-            class="nav-link collapsed"
-            href="#"
-            data-toggle="collapse"
-            data-target="#collapseUtilities"
-            aria-expanded="true"
-            aria-controls="collapseUtilities"
-          >
-            <i class="fas fa-fw fa-table"></i>
-            <span>Table</span>
+          <a class="nav-link" href="/">
+            <i class="fas fa-map-marker-alt fa-chart-area"></i>
+            <span>지도 보기</span>
           </a>
-          <div
-            id="collapseUtilities"
-            class="collapse"
-            aria-labelledby="headingUtilities"
-            data-parent="#accordionSidebar"
-          >
-            <div class="bg-white py-2 collapse-inner rounded">
-              <h6 class="collapse-header">Database Tables:</h6>
-              <a class="collapse-item" href="table-user.html">Users</a>
-              <a class="collapse-item" href="table-map.html">Maps</a>
-              <a class="collapse-item" href="table-story.html">Stories</a>
-              <a class="collapse-item" href="table-usermap.html">UserMaps</a>
-            </div>
-          </div>
         </li>
 
         <!-- Divider -->
@@ -216,11 +184,8 @@
                 <div
                   class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                   aria-labelledby="userDropdown"
+                  id="userInfo"
                 >
-                  <a class="dropdown-item" href="/">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                    기본 페이지
-                  </a>
                   <a
                     class="dropdown-item"
                     href="#"
@@ -239,47 +204,9 @@
           <!-- End of Topbar -->
 
           <!-- Begin Page Content -->
-          <div class="container-fluid">
+          <div class="container-fluid" id="container">
             <!-- Page Heading -->
-            <h1 class="h3 mb-4 text-gray-800">지도</h1>
-
-            <div class="row">
-              <div class="col-lg-12">
-                <!-- Circle Buttons -->
-                <div class="card shadow mb-4">
-                  <!-- Card Header - Accordion -->
-                  <a
-                    href="#collapseCardNoticeList"
-                    class="d-block card-header py-3"
-                    data-toggle="collapse"
-                    role="button"
-                    aria-expanded="true"
-                    aria-controls="collapseCardNoticeList"
-                  >
-                    <h6 class="m-0 font-weight-bold text-primary">
-                      지도 목록
-                    </h6>
-                  </a>
-                  <!-- Card Content - Collapse -->
-                  <div class="collapse show" id="collapseCardNoticeList">
-                    <div class="card-body">
-                      <div class="card-body">
-                        <div class="table-responsive">
-                          <table
-                            class="table table-bordered"
-                            id="dataTable"
-                            width="100%"
-                            cellspacing="0"
-                          ></table>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Another.. -->
-              </div>
-            </div>
+            <h1 class="h3 mb-4 text-gray-800">공지사항</h1>
           </div>
           <!-- /.container-fluid -->
         </div>
@@ -289,7 +216,7 @@
         <footer class="sticky-footer bg-white">
           <div class="container my-auto">
             <div class="copyright text-center my-auto">
-              <span>Copyright &copy; Your Website 2019</span>
+              <span>Copyright &copy; PhotoMap 2019</span>
             </div>
           </div>
         </footer>
@@ -358,11 +285,9 @@
     <script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Custom Kakao Library-->
-    <script src="/js/kakao-admin.min.js"></script>
+    <script src="/js/kakao.min.js"></script>
     <script>
-      $(document).ready(function() {
-        getQuery('mapTable', setDataTable);
-      });
+      getNoticeList();
     </script>
   </body>
 </html>
